k8s/overlay/develop/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "delivery:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  template:
    spec:
      volumes:
        - name: delivery
          persistentVolumeClaim:
            claimName: delivery
        - name: config-volume
          configMap:
            name: baseconfig
            defaultMode: 420                    
      containers:
      - name: delivery
        image: image-registry.openshift-image-registry.svc:5000/maximilianopizarro5-dev/delivery
        volumeMounts:
          - name: delivery
            mountPath: /home/app/target
          - name: config-volume
            mountPath: /home/app/src/main/python/config/BaseConfig.py
            subPath: BaseConfig.py
